# Pig-Dice-Game

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
backend/: manage.py
backend/game/: game_logic.py  tests.py  urls.py  views.py
documentation/: Rules.md  definition.md  install.md  rules.md
frontend/static/: index.css  index.js  pig.css  pig.js  setup.txt
frontend/templates/: index.html  pig.html  setup.txt
